Update index.html path2

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     
    </div>
 
-   <script src="root/js/home_page_animation.js"></script>
+   <script src="js/home_page_animation.js"></script>
     
 </body>
 </html>
